--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "next": "15.3.3",
     "patch-package": "^8.0.0",
     "pdf-lib": "^1.17.1",
+    "pdf-parse": "^1.1.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -62,6 +63,7 @@
   "devDependencies": {
     "@types/formidable": "^3.4.5",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
