--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "rehype-raw": "^7.0.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.16.2",
     "uuid": "^9.0.1",
     "zod": "^3.24.2"
   },
