--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "genkit": "^1.13.0",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
+    "papaparse": "^5.4.1",
     "patch-package": "^8.0.0",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
@@ -69,6 +70,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "@types/formidable": "^3.4.5",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.14",
     "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
