--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.1",
     "recharts": "^2.15.1",
@@ -72,6 +73,7 @@
     "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-dropzone": "^5.1.0",
     "@types/uuid": "^9.0.8",
     "@types/wav": "^1.0.3",
     "genkit-cli": "^1.13.0",
